apps/base/helloweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb-service
spec:
  type: NodePort
  selector:
    app: helloweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
