apps/base/helloweb/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-unsecured
spec:
  host: iot-k8s-edge.northeurope.cloudapp.azure.com
  path: "/test"   
  port:
    targetPort: 8080
  to:
    kind: Service
    name: service-name
